# AIMedia

./: .gitattributes  .gitignore  MULTI_AUTH_FEATURES.md  README.en.md  README.md  config.py  main.py  requirements.txt  update.bat  webui.bat
.streamlit/: config.toml  pages.toml
back/: .env  README.md  db.sqlite3'  fix_email_duplicates.py  manage.py  pyproject.toml  requirements.txt  test_email_auth.py
back/.claude/: settings.local.json
back/ArticleManagePlus/: .example.env  asgi.py  settings.py  urls.py  wsgi.py
back/apps/crawlers/: admin.py  api_urls.py  apps.py  get_article.py  models.py  serializers.py  urls.py  views.py
back/apps/crawlers/crawler_data/: __init__.py  classify.py  platform.py
back/apps/crawlers/management/: __init__.py
back/apps/crawlers/management/commands/: crawler.py
back/apps/users/: admin.py  api_urls.py  authentication.py  models.py  serializers.py  urls.py  views.py
back/apps/users/management/commands/: subscription.py
back/core/: exceptions.py
back/templates/: about.html  base.html  dashboard.html  docs.html  index.html  login.html  online.html  package.html  pay.html
back/utils/: admin.py  common.py  encipher.py  handler.py  middleware.py  mixins.py  models.py  permissons.py  redis_cli.py  response.py  serializers.py  viewsets.py  wechatpay.py
back/utils/ai_model/: token_tracker.py  tools.py  writing_assistant.py
manage/: account.py  account.pyd  common.py  common.pyd  task.py  task.pyd  user.py  user.pyd
pages/: accounts.py  auto.py  exit.py  hots.py  my.py  (+1 more)
pyside/: README.md  main.py  opt.json  pack.bat  pack.sh  pack_main.bat  pack_updater.bat  pyproject.toml  requirements.txt  test_add_toutiao_account.py  test_baijiahao_uid.py  test_nickname_fix.py  test_toutiao_cookies.py  updater.py  version.json
pyside/ai_model/: tools.py  writing_assistant.py
pyside/ai_model/knowledge_base/: 十个让我打焕新ModelY评价在座的都是txt.txt
pyside/api/: __init__.py  api_all.py  request_handler.py
pyside/auto_browser/: auto_base.py  baijiahao.py  qiehao.py  weixin.py
pyside/chrome/: chrome_100_percent.pak  chrome_200_percent.pak
pyside/chrome/locales/: fa.pak  kn.pak  zh-TW.pak
pyside/components/: account_manager_widget.py  account_selector.py  article_viewer.py  auto_publish_widget.py  help_widget.py  hot_spot_widget.py  material_import_dialog.py  material_import_widget.py  model_config_widget.py  notice_widget.py  preview_dialog.py  task_center_widget.py  user_info_widget.py  vip_widget.py
pyside/config/: update_config.json
pyside/crawlers/: ithome.py  pengpai.py  souhu.py  spider_all.py  tengxuntiyu.py  tengxuxinwen.py  wangyi.py  xinlang.py  zhongguoribao.py
pyside/docs/: logo.icns  res_rc.py  usedoc.md
pyside/services/: material_service.py
pyside/threads/: material_thread.py
pyside/utils/: account_service.py  article_product.py  article_service.py  auth_service.py  auto_updater.py  get_server_key.py  get_user_ope.py  hot_spot_service.py  local_data.py  message_popup.py  model_service.py  notice_service.py  precess_image.py  sql_data.py  task_service.py  theme_manager.py  token_check.py  updater.py
pyside/views/: account_dialog.py  article_dialog.py  login_window.py  main_window.py
(+22 files in other folders)
