[project]
name = "pyside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.2.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "cryptography==44.0.0",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "faiss-cpu==1.9.0.post1",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jiter==0.8.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.9",
    "langchain-community==0.3.9",
    "langchain-core==0.3.21",
    "langchain-openai==0.2.10",
    "langchain-text-splitters==0.3.2",
    "langsmith==0.1.147",
    "lxml==5.3.0",
    "markdown==3.7",
    "marshmallow==3.23.1",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "nuitka==2.5.4",
    "numpy==1.26.4",
    "openai==1.55.3",
    "ordered-set==4.1.0",
    "orjson==3.10.12",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "patool==1.12",
    "pillow==11.0.0",
    "propcache==0.2.1",
    "pycparser==2.22",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.6.1",
    "pyjwt==2.8.0",
    "pyopenssl==24.3.0",
    "pyperclip==1.9.0",
    "pyside6==6.8.0.2",
    "pyside6-addons==6.8.0.2",
    "pyside6-essentials==6.8.0.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "qrcode==8.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "selenium==4.1.0",
    "shiboken6==6.8.0.2",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.36",
    "tenacity==9.0.0",
    "tiktoken==0.8.0",
    "tqdm==4.67.1",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "urllib3==1.26.20",
    "urllib3-secure-extra==0.1.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "wrapt==1.17.0",
    "wsproto==1.2.0",
    "yarl==1.18.0",
    "zhipuai==2.1.5.20230904",
    "zstandard==0.23.0",
]
